--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
@@ -64,6 +64,7 @@
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdCbteCble_Ogiro, new { @id = "IdCbteCble_Ogiro" })
     @Html.HiddenFor(q => q.IdTipoCbte_Ogiro, new { @id = "IdTipoCbte_Ogiro" })
+    @Html.HiddenFor(q => q.TieneRetencion, new { @id = "TieneRetencion" })
     @Html.HiddenFor(q => q.co_fechaOg)
 
     @Html.HiddenFor(q => q.info_retencion.IdRetencion);
@@ -585,13 +586,10 @@
 }
 <script>
     ValidarCompraSucursales();
-    CargarPuntosDeVenta();
     GetUltimoDocumento();
 
     $("#IdSucursal").change(function () {
         cargar_bodega();
-        CargarPuntosDeVenta();
-        GetUltimoDocumento();
     });
 
     $("#IdPuntoVta").change(function () {
@@ -599,12 +597,10 @@
     });
 
     $("#co_subtotal_iva").change(function () {
-
         actualizar_valores();
         armar_diario();
     });
     $("#co_subtotal_siniva").change(function () {
-
         actualizar_valores();
         armar_diario();
     });
@@ -961,8 +957,7 @@
             IdEmpresa: $("#IdEmpresa").val(),
             IdSucursal: $("#IdSucursal").val(),
             IdPuntoVta: $("#IdPuntoVta").val(),
-            IdCbteCble_Ogiro: $("#IdCbteCble_Ogiro").val(),
-            IdTipoCbte_Ogiro: $("#IdTipoCbte_Ogiro").val()
+            TieneRetencion: $("#TieneRetencion").val()
         }
         $.ajax({
             type: 'POST',
@@ -972,24 +967,26 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                console.log(data);
-                if (data.data_puntovta != null) {
-                    if (data.data_puntovta.EsElectronico == true) {
-                        $("#datos_punto_venta1").hide();
-                        $("#datos_punto_venta2").hide();
-                        $("#datos_punto_venta3").hide();
-                    }
-                    else {
-                        $("#datos_punto_venta1").show();
-                        $("#datos_punto_venta2").show();
-                        $("#datos_punto_venta3").show();
+                if($("#TieneRetencion").val() == 0)
+                {
+                    $("#IdPuntoVta").attr('readonly', false);
+                    $("#serie1").attr('readonly', false);
+                    $("#serie2").attr('readonly', false);;
+                    $("#NumRetencion").attr('readonly', false);
 
-                        if(data.data_retencion.IdRetencion == 0)
+                    if (data.data_puntovta != null)
+                    {
+                        if (data.data_puntovta.EsElectronico == true)
                         {
-                            $("#IdPuntoVta").attr('readonly', false);
-                            $("#serie1").attr('readonly', false);
-                            $("#serie2").attr('readonly', false);;
-                            $("#NumRetencion").attr('readonly', false);
+                            $("#datos_punto_venta1").hide();
+                            $("#datos_punto_venta2").hide();
+                            $("#datos_punto_venta3").hide();
+                        }
+                        else
+                        {
+                            $("#datos_punto_venta1").show();
+                            $("#datos_punto_venta2").show();
+                            $("#datos_punto_venta3").show();
 
                             if (data.data_talonario != null)
                             {
@@ -998,15 +995,18 @@
                                 $("#NumRetencion").val(data.data_talonario.NumDocumento);
                             }
                         }
-                        else
-                        {
-                            $("#IdPuntoVta").attr('readonly', true);
-                            $("#serie1").attr('readonly', true);
-                            $("#serie2").attr('readonly', true);;
-                            $("#NumRetencion").attr('readonly', true);
-                        }
-
                     }
+                }
+                else
+                {
+                    $("#IdPuntoVta").attr('readonly', true);
+                    $("#serie1").attr('readonly', true);
+                    $("#serie2").attr('readonly', true);;
+                    $("#NumRetencion").attr('readonly', true);
+
+                    $("#datos_punto_venta1").show();
+                    $("#datos_punto_venta2").show();
+                    $("#datos_punto_venta3").show();
                 }
             },
             error: function (error) {
