--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
@@ -212,6 +212,7 @@
     @Html.HiddenFor(q => q.IdCbteCble_Ogiro, new { @id = "IdCbteCble_Ogiro" })
     @Html.HiddenFor(q => q.IdTipoCbte_Ogiro, new { @id = "IdTipoCbte_Ogiro" })
     @Html.HiddenFor(q => q.co_fechaOg)
+    @Html.HiddenFor(q => q.TieneRetencion, new { @id = "TieneRetencion" })
 
     <div class="modal fade" id="OcModal" role="dialog">
         <div class="modal-dialog modal-lg">
@@ -1102,8 +1103,7 @@
             IdEmpresa: $("#IdEmpresa").val(),
             IdSucursal: $("#IdSucursal").val(),
             IdPuntoVta: $("#IdPuntoVta").val(),
-            IdCbteCble_Ogiro: $("#IdCbteCble_Ogiro").val(),
-            IdTipoCbte_Ogiro: $("#IdTipoCbte_Ogiro").val()
+            TieneRetencion: $("#TieneRetencion").val()
         }
         $.ajax({
             type: 'POST',
@@ -1113,38 +1113,44 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                if (data.data_puntovta != null) {
-                    if (data.data_puntovta.EsElectronico == true) {
-                        $("#datos_punto_venta1").hide();
-                        $("#datos_punto_venta2").hide();
-                        $("#datos_punto_venta3").hide();
-                    }
-                    else {
-                        $("#datos_punto_venta1").show();
-                        $("#datos_punto_venta2").show();
-                        $("#datos_punto_venta3").show();
+                if($("#TieneRetencion").val() == 0)
+                {
+                    $("#serie1").attr('readonly', false);
+                    $("#serie2").attr('readonly', false);;
+                    $("#NumRetencion").attr('readonly', false);
 
-                        if(data.data_retencion.IdRetencion == 0)
+                    if (data.data_puntovta != null) 
+                    {
+                        if (data.data_puntovta.EsElectronico == true) 
                         {
-                            $("#serie1").attr('readonly', false);
-                            $("#serie2").attr('readonly', false);;
-                            $("#NumRetencion").attr('readonly', false);
+                            $("#datos_punto_venta1").hide();
+                            $("#datos_punto_venta2").hide();
+                            $("#datos_punto_venta3").hide();
+                        }
+                        else 
+                        {
+                            $("#datos_punto_venta1").show();
+                            $("#datos_punto_venta2").show();
+                            $("#datos_punto_venta3").show();
 
                             if (data.data_talonario != null) 
                             {
                                 $("#serie1").val(data.data_talonario.Establecimiento);
                                 $("#serie2").val(data.data_talonario.PuntoEmision);
                                 $("#NumRetencion").val(data.data_talonario.NumDocumento);
-                            }
+                            }                     
                         }
-                        else
-                        {
-                            $("#serie1").attr('readonly', true);
-                            $("#serie2").attr('readonly', true);;
-                            $("#NumRetencion").attr('readonly', true);
-                        }
-                        
                     }
+                }
+                else
+                {                    
+                    $("#serie1").attr('readonly', true);
+                    $("#serie2").attr('readonly', true);;
+                    $("#NumRetencion").attr('readonly', true);
+
+                    $("#datos_punto_venta1").show();
+                    $("#datos_punto_venta2").show();
+                    $("#datos_punto_venta3").show();                
                 }
             },
             error: function (error) {
