--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/_GridViewPartial_inv_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/_GridViewPartial_inv_det.cshtml
@@ -30,7 +30,7 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-   
+
 
         settings.Columns.Add(column =>
         {
@@ -99,6 +99,7 @@
 
         });
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
+        settings.ClientSideEvents.EndCallback = "function(s,e){if (s.IsEditing()) {var editor = IdProducto;editor.Focus();}}";
     });
 }
 @grid.Bind(Model).GetHtml()
