--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_GridViewPartial_transferencias_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_GridViewPartial_transferencias_det.cshtml
@@ -73,7 +73,7 @@
                 p.ValueType = typeof(string);
                 //p.ClientSideEvents.Init = "function(s,e){s.PerformCallback();}";
                 p.BindList(ViewBag.lst_unidad);
-                p.ClientSideEvents.BeginCallback = "UnidadMedidaComboBox_BeginCallback";                
+                p.ClientSideEvents.BeginCallback = "UnidadMedidaComboBox_BeginCallback";
                 p.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
             });
         });
@@ -85,6 +85,7 @@
 
         });
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
+        settings.ClientSideEvents.EndCallback = "function(s,e){if (s.IsEditing()) {var editor = IdProducto;editor.Focus();}}";
 
     });
 }
