--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/_GridViewPartial_deudas_sin_ret.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/_GridViewPartial_deudas_sin_ret.cshtml
@@ -8,6 +8,9 @@
 
         settings.KeyFieldName = "IdCbteCble_Ogiro";
 
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         settings.Width = Unit.Percentage(100);
 
         //Configuracion responsive
