--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_GridViewPartial_cobranza_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_GridViewPartial_cobranza_det.cshtml
@@ -121,7 +121,7 @@
         });
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_ValorPago").DisplayFormat = "Total: {0:n2}";
         settings.Settings.ShowFooter = true;
-        settings.ClientSideEvents.EndCallback = "function (s,e){CalcularSaldo();}";
+        settings.ClientSideEvents.EndCallback = "function (s,e){CalcularSaldo();if (s.IsEditing()) {var editor = s.GetEditor('dc_ValorPago');editor.Focus();}}";
 
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
