--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/_GridViewPartial_nota_debito_dc.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/_GridViewPartial_nota_debito_dc.cshtml
@@ -94,7 +94,8 @@
         });
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor_debe");
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor_haber");
-        
+        settings.ClientSideEvents.EndCallback = "function(s,e){  if (s.IsEditing()) {var editor = IdCtaCble;editor.Focus();}}";
+
     });
 
 }
